--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>2.3.0.M1</version>
+		<version>2.3.0.BUILD-SNAPSHOT</version>
 	</parent>
 
 	<modules>
@@ -45,7 +45,7 @@
 		<nohttp.version>0.0.3.RELEASE</nohttp.version>
 		<maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
 		<neo4j.ogm.version>3.2.5</neo4j.ogm.version>
-		<springdata.commons>2.3.0.M1</springdata.commons>
+		<springdata.commons>2.3.0.BUILD-SNAPSHOT</springdata.commons>
 	</properties>
 
 	<developers>
@@ -200,8 +200,8 @@
 
 	<repositories>
 		<repository>
-			<id>spring-libs-milestone</id>
-			<url>https://repo.spring.io/libs-milestone</url>
+			<id>spring-libs-snapshot</id>
+			<url>https://repo.spring.io/libs-snapshot</url>
 		</repository>
 	</repositories>
 
