--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
 		<module>examples/reactive-web</module>
 		<module>examples/imperative-web</module>
 		<module>examples/mapping</module>
+		<module>examples/multi-database</module>
 	</modules>
 
 	<properties>
