GH-127 - Provide a way to configure the database being used.
This fixes #124 by providing the a Neo4jDatabaseNameProvider.

The Neo4jDatabaseNameProvider allows for configuring the database used by all transactions managers and all templates. The configured database will be passed on to the Neo4j templates, both reactive and imperative. The Neo4j clients are still be able to use all databases, they don't know a fixed database name provider.

The database name provider must of course be provided to the transaction managers. Both reactive and imperative transaction managers keep on synchronising on the driver, but check the target database and will prevent switching the database in-between an application level transaction.

For those scenarios where a client wants to use a different database than the one configured with the default transaction manager, it must run in an implicit (aka auto commit transaction) or run a second transaction manager, configured to use the correct database.

In case interactions spawn multiple databases, several transaction managers must be applied and the propagation behaviour needs to be `REQUIRES_NEW`, meaning an ongoing transaction will be suspended when the database is switched and resumed when the inner transaction finishes.

The commit also contains the requried properties for the Spring Boot autoconfiguration.

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,7 @@ jobs:
         run: >
           ./mvnw --no-transfer-progress clean deploy -Dchangelist= -Dsha1=-$GITHUB_SHA
           -DaltDeploymentRepository=releases::default::file://$GITHUB_WORKSPACE/target/repository 
-          -pl !org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-imperative-web,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-mapping,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-reactive-web
+          -pl !org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-imperative-web,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-mapping,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-reactive-web,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-multi-database
       - name: Archive artifacts
         uses: actions/upload-artifact@v1
         with:
@@ -55,4 +55,4 @@ jobs:
       - name: Run Maven build
         run: >
           ./mvnw --no-transfer-progress clean verify -Dchangelist= -Dsha1=-$GITHUB_SHA
-          -pl org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-imperative-web,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-mapping,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-reactive-web
+          -pl org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-imperative-web,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-mapping,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-reactive-web,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-multi-database
