--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>2.2.0.RELEASE</version>
+		<version>2.2.4.RELEASE</version>
 	</parent>
 
 	<groupId>org.neo4j.springframework.data</groupId>
@@ -82,30 +82,31 @@
 
 	<properties>
 		<apiguardian.version>1.0.0</apiguardian.version>
-		<assertj.version>3.11.1</assertj.version>
+		<assertj.version>3.15.0</assertj.version>
+		<byte-buddy.version>1.9.10</byte-buddy.version>
 		<changelist>-SNAPSHOT</changelist>
-		<checkstyle.version>8.21</checkstyle.version>
-		<flatten-maven-plugin.version>1.1.0</flatten-maven-plugin.version>
-		<jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
+		<checkstyle.version>8.29</checkstyle.version>
+		<flatten-maven-plugin.version>1.2.1</flatten-maven-plugin.version>
+		<jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
 		<java.version>1.8</java.version>
 		<jqassistant-dashboard-plugin.version>1.7.1</jqassistant-dashboard-plugin.version>
 		<jqassistant.plugin.version>1.7.0</jqassistant.plugin.version>
 		<jqassistant.version>1.7.0</jqassistant.version>
-		<junit-jupiter.version>5.4.0</junit-jupiter.version>
+		<junit-jupiter.version>5.6.0</junit-jupiter.version>
 		<maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
 		<maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
-		<maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
-		<maven-failsafe-plugin.version>3.0.0-M3</maven-failsafe-plugin.version>
+		<maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
+		<maven-failsafe-plugin.version>3.0.0-M4</maven-failsafe-plugin.version>
 		<maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
-		<maven-javadoc-plugin.version>3.1.0</maven-javadoc-plugin.version>
+		<maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
 		<maven-site-plugin.version>3.7.1</maven-site-plugin.version>
-		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-		<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
+		<maven-source-plugin.version>3.2.0</maven-source-plugin.version>
+		<maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<mockito.version>2.28.2</mockito.version>
+		<mockito.version>3.2.4</mockito.version>
 		<neo4j-java-driver.version>4.0.0</neo4j-java-driver.version>
-		<neo4j.version>3.5.8</neo4j.version>
+		<neo4j.version>4.0.0</neo4j.version>
 		<objenesis.version>3.0.1</objenesis.version> <!-- mockk requires objenesis >= 3 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<r2dbc.releasetrain>Arabba-RELEASE</r2dbc.releasetrain>
@@ -114,8 +115,8 @@
 		<rxjava.version>1.3.8</rxjava.version>
 		<rxjava2.version>2.2.5</rxjava2.version>
 		<sha1></sha1>
-		<springdata-commons.version>2.2.0.RELEASE</springdata-commons.version>
-		<testcontainers.version>1.10.7</testcontainers.version>
+		<springdata-commons.version>2.2.4.RELEASE</springdata-commons.version>
+		<testcontainers.version>1.12.5</testcontainers.version>
 
 		<skipUnitTests>${skipTests}</skipUnitTests>
 		<skipIntegrationTests>${skipTests}</skipIntegrationTests>
@@ -128,6 +129,16 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>net.bytebuddy</groupId>
+				<artifactId>byte-buddy</artifactId>
+				<version>${byte-buddy.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>net.bytebuddy</groupId>
+				<artifactId>byte-buddy-agent</artifactId>
+				<version>${byte-buddy.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.objenesis</groupId>
 				<artifactId>objenesis</artifactId>
