--- a/examples/imperative-web/pom.xml
+++ b/examples/imperative-web/pom.xml
@@ -175,7 +175,7 @@
 				</property>
 			</activation>
 			<properties>
-				<changelist>-SNAPSHOT</changelist>
+				<changelist>-beta03</changelist>
 			</properties>
 		</profile>
 	</profiles>
