GH-80 - Add Spring Data REST example.
This also includes setting the mapping context for Spring internals.
The example can also be used as a dev container with vs code.

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
 		<module>examples/imperative-web</module>
 		<module>examples/mapping</module>
 		<module>examples/multi-database</module>
+		<module>examples/rest</module>
 	</modules>
 
 	<properties>
