DATAGRAPH-1296 - Fix checkstyle setup.
Due to a change in Spring Data Build
(#46e2b2056a52dd581801d55f8d287c04379f9212), we need to upgrade
Maven Checkstyle plugin and checkstyle.

Omitting the management leads to different failures with the nohttp
plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,9 @@
 
 		<project.type>multi</project.type>
 
-		<checkstyle.version>8.18</checkstyle.version>
+		<checkstyle.version>8.29</checkstyle.version>
 		<nohttp.version>0.0.3.RELEASE</nohttp.version>
-		<maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
+		<maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
 		<neo4j.ogm.version>3.1.17</neo4j.ogm.version>
 		<springdata.commons>2.1.16.BUILD-SNAPSHOT</springdata.commons>
 	</properties>
@@ -217,6 +217,7 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-checkstyle-plugin</artifactId>
 					<version>${maven-checkstyle-plugin.version}</version>
 					<dependencies>
