--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,14 +22,14 @@ jobs:
       - name: Run Maven build
         run: >
           ./mvnw --no-transfer-progress clean deploy -Dchangelist= -Dsha1=-$GITHUB_SHA
-          -DaltDeploymentRepository=releases::default::file://$GITHUB_WORKSPACE/target/repository 
-          -pl !org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-imperative-web,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-mapping,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-reactive-web,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-multi-database,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-spring-data-rest
+          -DaltDeploymentRepository=releases::default::file://$GITHUB_WORKSPACE/target/repository
+          -pl !org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-imperative-web,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-mapping,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-reactive-web,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-multi-database,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-spring-data-rest,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-docs
       - name: Archive artifacts
         uses: actions/upload-artifact@v1
         with:
           name: artifacts
           path: target/repository
-          
+
   build_examples:
     name: Verify examples with ${{ matrix.java }}
     runs-on: ubuntu-latest
@@ -55,4 +55,4 @@ jobs:
       - name: Run Maven build
         run: >
           ./mvnw --no-transfer-progress clean verify -Dchangelist= -Dsha1=-$GITHUB_SHA
-          -pl org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-imperative-web,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-mapping,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-reactive-web,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-multi-database
+          -pl org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-imperative-web,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-mapping,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-reactive-web,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-multi-database,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-docs
