--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>2.1.16.BUILD-SNAPSHOT</version>
+		<version>2.1.16.RELEASE</version>
 	</parent>
 
 	<modules>
@@ -46,7 +46,7 @@
 		<nohttp.version>0.0.3.RELEASE</nohttp.version>
 		<maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
 		<neo4j.ogm.version>3.1.17</neo4j.ogm.version>
-		<springdata.commons>2.1.16.BUILD-SNAPSHOT</springdata.commons>
+		<springdata.commons>2.1.16.RELEASE</springdata.commons>
 	</properties>
 
 	<developers>
@@ -201,8 +201,8 @@
 
 	<repositories>
 		<repository>
-			<id>spring-libs-snapshot</id>
-			<url>https://repo.spring.io/libs-snapshot</url>
+			<id>spring-libs-release</id>
+			<url>https://repo.spring.io/libs-release</url>
 		</repository>
 	</repositories>
 
