DATAGRAPH-1300 - Change query paramater style.
Use the $-style instead of the deprecated {}.

--- a/spring-data-neo4j/src/test/resources/META-INF/neo4j-named-queries.properties
+++ b/spring-data-neo4j/src/test/resources/META-INF/neo4j-named-queries.properties
@@ -1,5 +1,5 @@
 SampleEntityForNamedQuery.findByQueryWithoutParameter=MATCH (e) WHERE e.name='test' RETURN e
-SampleEntityForNamedQuery.findByQueryWithParameter=MATCH (e) WHERE e.name={name} RETURN e
-SampleEntityForNamedQuery.findByPagedQueryWithParameter=MATCH (e) WHERE e.name={name} RETURN e
-SampleEntityForNamedQuery.findByPagedQueryWithParameter.countQuery=MATCH (e) WHERE e.name={name} RETURN count(e)
-SampleEntityForNamedQuery.findByPagedQueryWithoutCountQuery=MATCH (e) WHERE e.name={name} RETURN e
+SampleEntityForNamedQuery.findByQueryWithParameter=MATCH (e) WHERE e.name=$name RETURN e
+SampleEntityForNamedQuery.findByPagedQueryWithParameter=MATCH (e) WHERE e.name=$name RETURN e
+SampleEntityForNamedQuery.findByPagedQueryWithParameter.countQuery=MATCH (e) WHERE e.name=$name RETURN count(e)
+SampleEntityForNamedQuery.findByPagedQueryWithoutCountQuery=MATCH (e) WHERE e.name=$name RETURN e
