--- a/examples/reactive-web/pom.xml
+++ b/examples/reactive-web/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<groupId>org.springframework.boot</groupId>
-		<version>2.2.4.RELEASE</version>
+		<version>2.2.6.RELEASE</version>
 		<relativePath></relativePath>
 		<!-- lookup parent from repository -->
 	</parent>
@@ -42,7 +42,7 @@
 		<maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
 		<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
 		<spring-data-neo4j-rx.version>${revision}${sha1}${changelist}</spring-data-neo4j-rx.version>
-		<testcontainers.version>1.10.7</testcontainers.version>
+		<testcontainers.version>1.13.0</testcontainers.version>
 	</properties>
 
 	<dependencies>
@@ -61,6 +61,12 @@
 			<artifactId>spring-data-neo4j-rx-spring-boot-test-autoconfigure</artifactId>
 			<version>${spring-data-neo4j-rx.version}</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>neo4j-harness</artifactId>
+					<groupId>org.neo4j.test</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -184,7 +190,7 @@
 				</property>
 			</activation>
 			<properties>
-				<changelist>-beta03</changelist>
+				<changelist>-SNAPSHOT</changelist>
 			</properties>
 		</profile>
 	</profiles>
