GH-175 - Expose Cypher DSL as experimental API.
This change

* Exposes the Cypher DSL as experimental API and adds a chapter to the documentation
* It removes the `Expression` interface from both `Node` and `Relationship` as they are no expressions.
* It allows symbolic names being reused.

This commit closes #106. 

Co-authored-by: Gerrit Meier <meistermeier@gmail.com>

--- a/examples/docs/pom.xml
+++ b/examples/docs/pom.xml
@@ -165,7 +165,7 @@
 				</property>
 			</activation>
 			<properties>
-				<changelist>-beta04</changelist>
+				<changelist>-SNAPSHOT</changelist>
 			</properties>
 		</profile>
 	</profiles>
