--- a/examples/rest/pom.xml
+++ b/examples/rest/pom.xml
@@ -144,7 +144,7 @@
 				</property>
 			</activation>
 			<properties>
-				<changelist>-beta04</changelist>
+				<changelist>-rc01</changelist>
 			</properties>
 		</profile>
 	</profiles>
