--- a/examples/imperative-web/pom.xml
+++ b/examples/imperative-web/pom.xml
@@ -178,7 +178,7 @@
 				</property>
 			</activation>
 			<properties>
-				<changelist>-beta04</changelist>
+				<changelist>-rc01</changelist>
 			</properties>
 		</profile>
 	</profiles>
