After release update.
Update examples to use the release version.
Set next development version to 1.0.1.

--- a/examples/docs/pom.xml
+++ b/examples/docs/pom.xml
@@ -165,7 +165,7 @@
 				</property>
 			</activation>
 			<properties>
-				<changelist>-rc01</changelist>
+				<changelist></changelist>
 			</properties>
 		</profile>
 	</profiles>
