--- a/examples/mapping/pom.xml
+++ b/examples/mapping/pom.xml
@@ -137,7 +137,7 @@
 				</property>
 			</activation>
 			<properties>
-				<changelist>-rc01</changelist>
+				<changelist></changelist>
 			</properties>
 		</profile>
 	</profiles>
