--- a/examples/rest/pom.xml
+++ b/examples/rest/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<groupId>org.springframework.boot</groupId>
-		<version>2.2.6.RELEASE</version>
+		<version>2.3.0.RELEASE</version>
 		<relativePath></relativePath>
 		<!-- lookup parent from repository -->
 	</parent>
@@ -30,6 +30,13 @@
 			<groupId>org.neo4j.springframework.data</groupId>
 			<artifactId>spring-data-neo4j-rx-spring-boot-starter</artifactId>
 			<version>${spring-data-neo4j-rx.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.neo4j.springframework.data</groupId>
+			<artifactId>spring-data-neo4j-rx-spring-boot-test-autoconfigure</artifactId>
+			<version>${spring-data-neo4j-rx.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
