--- a/spring-data-neo4j-rx-spring-boot-starter-parent/pom.xml
+++ b/spring-data-neo4j-rx-spring-boot-starter-parent/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.6.RELEASE</version>
+		<version>2.3.0.RELEASE</version>
 		<relativePath></relativePath>
 	</parent>
 
@@ -96,6 +96,11 @@
 				<artifactId>neo4j</artifactId>
 				<version>${testcontainers.version}</version>
 				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-test</artifactId>
+				<scope>compile</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
