--- a/examples/docs/pom.xml
+++ b/examples/docs/pom.xml
@@ -143,7 +143,7 @@
 				</property>
 			</activation>
 			<properties>
-				<revision>1.0</revision>
+				<revision>1.1.0</revision>
 			</properties>
 		</profile>
 		<profile>
@@ -165,7 +165,7 @@
 				</property>
 			</activation>
 			<properties>
-				<changelist>-SNAPSHOT</changelist>
+				<changelist></changelist>
 			</properties>
 		</profile>
 	</profiles>
