--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         run: >
           ./mvnw --no-transfer-progress clean deploy -Dchangelist= -Dsha1=-$GITHUB_SHA
           -DaltDeploymentRepository=releases::default::file://$GITHUB_WORKSPACE/target/repository
-          -pl !org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-imperative-web,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-mapping,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-reactive-web,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-multi-database,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-spring-data-rest,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-docs
+          -pl !org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-imperative-web,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-mapping,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-reactive-web,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-multi-database,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-spring-data-rest,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-docs,!org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-kotlin
       - name: Archive artifacts
         uses: actions/upload-artifact@v1
         with:
@@ -55,4 +55,4 @@ jobs:
       - name: Run Maven build
         run: >
           ./mvnw --no-transfer-progress clean verify -Drevision=1.1 -Dchangelist= -Dsha1=-$GITHUB_SHA
-          -pl org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-imperative-web,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-mapping,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-reactive-web,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-multi-database,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-spring-data-rest,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-docs
+          -pl org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-imperative-web,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-mapping,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-reactive-web,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-multi-database,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-spring-data-rest,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-docs,org.neo4j.doc.springframework.data:spring-data-neo4j-rx-examples-kotlin
