DATAGRAPH-1368 - Fix included OGM docs.
This changes appends the Neo4j-OGM version to the AsciiDoctor configuration and thus removes the need for changes to the included files in the future.

--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,16 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.asciidoctor</groupId>
+				<artifactId>asciidoctor-maven-plugin</artifactId>
+				<configuration combine.self="append">
+					<doctype>book</doctype>
+					<attributes>
+						<neo4jOgmVersion>${neo4j.ogm.version}</neo4jOgmVersion>
+					</attributes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
