Add support for the QuerydslPredicateExecutor.

--- a/pom.xml
+++ b/pom.xml
@@ -359,7 +359,12 @@
 			<artifactId>neo4j</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.querydsl</groupId>
+			<artifactId>querydsl-core</artifactId>
+			<version>${querydsl}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<repositories>
