GH-2334 - Fix compiler and IDE warnings where appropriate.
Went through all the compiler and IDE warnings and fixed all compiler warnings and in the process setting the build to fail if any new one appears.
Most of them are unchecked conversions, which we cannot avoid in all places. Those have been surpressed.

This closes #2334.

--- a/pom.xml
+++ b/pom.xml
@@ -720,6 +720,23 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<configuration combine.self="append">
+							<compilerArgs>
+								<arg>-Xlint:all,-options,-path</arg>
+								<arg>-Werror</arg>
+							</compilerArgs>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 
 	</build>
